[package]
name = "jmp-rs"
version = "0.1.0"
authors = ["Aleksandr Lisianoi <alisianoi@protonmail.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/alisianoi/jmp-rs"
license = "MIT"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
