[package]
name = "jmp-rs"
version = "0.1.0"
authors = ["Aleksandr Lisianoi <alisianoi@protonmail.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/alisianoi/jmp-rs"
description = "Great for jumping around!"
license = "MIT"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
chrono = "0.4"
fern = { version = "0.5", features = ["colored"] }
